<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout"

        android:background="@drawable/repas"
    tools:ignore="Overdraw">

    <LinearLayout
            android:id="@+id/activity_login_content"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="2"

            android:gravity="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/activity_login_connection"

            android:orientation="vertical">

        <ImageView

            android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:src="@drawable/go4lunch_icon_test"
                android:contentDescription="@string/login_icon"/>

        <TextView

            android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:text="@string/app_name"/>

        <TextView

            android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="@string/login_content_description"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/activity_login_connection"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"

            android:gravity="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_content"
            app:layout_constraintBottom_toBottomOf="parent"

            android:paddingHorizontal="50dp"

            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_login_connection_facebook"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:paddingVertical="20dp"

            android:background="@color/button_facebook"

            android:paddingTop="20dp"
            android:paddingBottom="20dp"

            android:textColor="@android:color/white"

            android:text="@string/login_facebook" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activity_login_connection_google"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_marginTop="20dp"
                android:paddingVertical="20dp"

                android:background="@color/google_button"

                android:textColor="@android:color/white"

                android:text="@string/login_google"/>
    </LinearLayout>
</LinearLayout>